objects/LLC_BI__Loan_Collateral_Aggregate__c.object
<CustomObject>
    <description>Contains the rollup fields from the Loan Collateral object. They are not on the Loan object because there is a limit of 10 rollups per object.</description>
    <fields>
        <fullName>Collateral_Recovery_Value_Umbrella__c</fullName>
        <description>Created for the ABN Amro use case and used to calculate total recovery value on the collateral parent and used on the loan object DMR - 000321.</description>
        <label>Collateral Recovery Value - Umbrella</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.Recovery_Value__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Pledged_Rollup_Count__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Collateral_Value_Umbrella__c</fullName>
        <description>Created for the ABN Amro use case and used to calculate total collateral value on the collateral parent and used on the loan object DMR - 000321.</description>
        <label>Collateral Value - Umbrella</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral_Value__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Pledged_Rollup_Count__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Pledged_Count__c</fullName>
        <description>Automatically calculated. The number of Collateral Pledged Records.</description>
        <inlineHelpText>Number of Collateral Pledged Records</inlineHelpText>
        <label>Collateral Pledged Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Total_Lendable_Value__c</fullName>
        <description>Automatically calculated. The sum of all collateral lendable value.</description>
        <inlineHelpText>Sum of all collateral lendable value</inlineHelpText>
        <label>Current Total Lendable Value</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Current_Lendable_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Pledged__c</fullName>
        <description>Automatically calculated. The total amount of collateral pledged against the loan.</description>
        <inlineHelpText>The total amount of collateral pledged against the loan</inlineHelpText>
        <label>Total Collateral Pledged</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Value__c</fullName>
        <description>Automatically calculated. The combined value of all collateral on the loan.</description>
        <inlineHelpText>The combined value of all collateral on the loan</inlineHelpText>
        <label>Total Collateral Value</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Current_Lien_Amount__c</fullName>
        <description>Automatically calculated. The sum of all Liens associated with the loan.</description>
        <inlineHelpText>Sum of all Liens associated with the loan</inlineHelpText>
        <label>Total Current Lien Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Total_Prior_Lien_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Superior_Lien_Amount__c</fullName>
        <description>Automatically calculated. The total amount of all liens with a higher position.</description>
        <label>Total Superior Lien Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Total_Superior_Lien_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Collateral_Recovery_Value__c</fullName>
        <description>Created for the ABN Amro use case and used to calculate total recovery value on the collateral and used on the loan object DMR - 000321.</description>
        <label>Total Collateral Recovery Value</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.Recovery_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Amount_Umbrella__c</fullName>
        <description>Created for the ABN Amro use case and used for Real Estate to calculate total subscription amount on the collateral parent and used on the loan object - DMR - 000321.</description>
        <label>Total Subscription Amount - Umbrella</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.Subscription_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Total_Pledged_Rollup_Value__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Amount__c</fullName>
        <description>Created for the ABN Amro use case and used for Real Estate to calculate total subscription amount on the collateral and used on the loan object - DMR - 000321.</description>
        <label>Total Subscription Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.Subscription_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Loan_Collateral_Aggregate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Loan Collateral Aggregate</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Loan Collateral Aggregate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Collateral Aggregate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>